tests/js_error/source_locations/expression/array/spread_iterator_next.js
var iterable = {
  [Symbol.iterator]() {
    return {
      next() {
        throw new Error();
      }
    }
  }
};

[...iterable]